[package]
name = "sefer-alloc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "libFuzzer target for sefer-alloc's Region op-stream invariants (Phase 5 hardening)."

# Marker required by `cargo-fuzz` to recognise this as a fuzz harness crate.
# Without it `cargo fuzz build` / `cargo fuzz run` refuse to proceed.
[package.metadata]
cargo-fuzz = true

# This crate is its OWN workspace root so it is never pulled into the parent
# `sefer-alloc` workspace — the main `cargo build` / `cargo test` are completely
# unaffected by it. Run targets from inside this directory.
[workspace]

[dependencies]
# The crate under test. One shared dependency drives all three targets:
#   * `region_ops`       — the always-available single-threaded core
#                          (`Region` / `Handle`), no feature needed.
#   * `global_alloc_ops` — the Phase 8 segment substrate (`AllocCore`),
#                          `alloc-core`.
#   * `heap_core_ops`    — the flagship `production` face (`SeferAlloc`) with
#                          the fastbin magazine path, `production`.
# Cargo unifies features across this single dependency; `production` is a
# superset (it enables `alloc-core` transitively), so building any one target
# builds them all with the union. That is intended — the fuzz crate is a
# hardening harness, not a minimal-feature build.
sefer-alloc = { path = "..", features = ["production"] }

# libFuzzer harness + `arbitrary` op derivation. Pinned to the versions that
# `cargo-fuzz` scaffolds; both are fuzz-only deps and do NOT touch the main
# crate's manifest.
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "region_ops"
path = "fuzz_targets/region_ops.rs"
test = false
doc = false

[[bin]]
name = "global_alloc_ops"
path = "fuzz_targets/global_alloc_ops.rs"
test = false
doc = false

[[bin]]
name = "heap_core_ops"
path = "fuzz_targets/heap_core_ops.rs"
test = false
doc = false
